...
                    + fadeIn(animationSpec = tween(durationMillis = 300)),
            exit = scaleOut(animationSpec = tween(durationMillis = 500))
                    + fadeOut(animationSpec = tween(durationMillis = 300)),
        ) {
            Image(
                painter = painterResource(id = res),
                contentDescription = "dice result"
            )
        }
    }
    Column(
        modifier = Modifier.fillMaxSize(),
        horizontalAlignment = Alignment.CenterHorizontally,
...
            onClick = {
                if (!visible.value) result.value = (1..6).random()
                visible.value = !visible.value
            },
            colors = ButtonDefaults.buttonColors(
                backgroundColor = Color.Black.copy(alpha = 0.6F)),
            modifier = Modifier.semantics { contentDescription = "dice start" }
        ) {
            Text(
                text = "Dice",
                color = Color.White
            )
        }
...
